edit <head> and css @import

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,6 +2,7 @@
 @import "ui.totop.css";
 @import "fonts.css";
 @import "slider.css";
+@import "buttons.css";
 @import "burger-button.css";
 
 body {
