--- a/src/css/main.css
+++ b/src/css/main.css
@@ -25,7 +25,7 @@ html ::before {
 	box-sizing:inherit;
 }
 
-/* Global Structure---------------------------------------- */
+/* Global Structure */
 
 .fleft {
 	float: left
