--- a/src/css/header.css
+++ b/src/css/header.css
@@ -23,7 +23,7 @@
 	position: absolute;
 	z-index: 1000;
 	top: 0; 
-	min-height: 56px;
+	min-height: 142px;
 	min-width: 280px;
 	display: flex;
 	flex-direction: column;
@@ -31,7 +31,7 @@
 	border-bottom: 5px solid #ffaa4b;
 }
 
-.top-nav ul {
+.top-nav__list {
 	margin: 0;
 	padding: 5px 0;
 	list-style: none;
@@ -56,7 +56,7 @@
 	text-align: center;
 }
 
-.top-nav__user {
+.top-nav__list--user {
 	border-bottom: 1px solid #ffaa4b;
 }
 
@@ -92,12 +92,6 @@
 	display: none;
 }
 
-.top-nav__list {
-	margin: 0;
-	padding: 0;
-	list-style: none;
-}
-
 .top-nav__list a {
 	display: block;
 	padding: 10px;
@@ -130,7 +124,7 @@
 	text-align: center;
 }
 
-.header--closed {
+.page-header--closed {
 	& .top-nav__logo {
 		order: 10;
 	}
@@ -138,27 +132,14 @@
 	& .lang-switch {
 		display: none;
 	}
-	& .top-nav__user {
-		border: none;
-	}
 	& .top-nav {
 		width: 100%;
 	}
-	& ul {
+	& .top-nav__list {
+		border: none;
 		padding: 1px 0 1px 50px;
 	}
 }
-
-@media only screen and (max-width: 479px) {
-  
-    .header-top-up__links span {
-      display: none;
-    }
-  
-    .header-top-up__links b {
-      display: inline;
-    }
-  }
 
   @media (min-width: 700px) {
     
