--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,6 +1,3 @@
-/*********************************header*************************************/
-
-
 .page-header {
 	position: relative;
 	margin-bottom: 20px;
@@ -8,7 +5,7 @@
 
 .page-header__holder {
 	height: 142px;
-	background-color: crimson;
+	background-color: var(--main-blau);
 }
 
 .page-header__wrapper {
@@ -60,11 +57,6 @@
 	border-bottom: 1px solid #ffaa4b;
 }
 
-.top-nav__user .current {
-	background: #71caf2;
-	transition-duration: 300ms; 
-}
-
 .top-nav__user a:active {
 	background: rgba(0, 0, 0, .1);
 	transition-duration: 300ms; 
@@ -106,7 +98,7 @@
 }
 
 .top-nav__list .current {
-	background: #71caf2;
+	background: var(--main-blau);
 	transition-duration: 300ms; 
 }
 
@@ -141,13 +133,50 @@
 	}
 }
 
-  @media (min-width: 700px) {
-    
-      /* .top-nav__logo span {
-        display: block;
-      }
-    
-      .top-nav__list {
-        display: flex;
-      } */
-    }
+@media (min-width: 710px) {
+	
+		.toggle-menu {
+			display: none;
+		} 
+	
+	/* .top-nav__logo span {
+		display: block;
+	}*/
+
+	.page-header--closed {
+
+		& .top-nav__list li {
+			display: inline-block;
+		}
+
+		& .lang-switch {
+			display: block;
+		}
+
+		& .top-nav__logo {
+			order: initial;
+		}
+
+	}
+
+	.top-nav__logo {
+		order: initial;
+	}
+	
+	.top-nav__list {
+		display: flex;
+	} 
+	
+	.top-nav__list li{
+		display: inline-block;
+	}
+
+	.top-nav__topmenu--desktop {
+		display: flex;
+		flex-direction: row-reverse;
+	}
+
+	.lang-switch {
+		border: none;
+	}
+}
