--- a/src/css/arrow-to-top.css
+++ b/src/css/arrow-to-top.css
@@ -1,21 +1,13 @@
 #arrowToTop {
-	display: flex;
 	position: fixed;
 	right:25px;
-	bottom: 120px;
+	bottom: 8vh;
 	z-index: 10;
 	cursor: pointer;
-	width: 36px;
-	height: 36px;
+	padding: 12px 16px;
 	background-color: rgba(0, 0, 0, 0.3);
 	border-radius: 50%;
-	color: #dddddd;
-}
-
-#arrowToTop::before {
-	content: '△';
-	margin: auto;
-	padding-bottom: 0.1em
+	color: #eeeeee;
 }
 
 #arrowToTop:hover {
