--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,139 +15,10 @@
 
 @import "header.css";
 @import "footer.css";
+@import "main-content.css";
+@import "home-page.css";
+@import "inner-page.css";
 
-/********************** Content ************************/
-
-.main-content {
-	margin-bottom: 20px;
-}
-
-.main-content__wrapper {
-	width: 100%;
-	max-width: 1280px;
-	margin: 0 auto;
-	padding-right: 15px;
-	padding-left: 15px;
-	display: flex;
-	flex-direction: column;
-}
-
-.home-page-top {
-	display: flex;
-	flex-direction: column;
-	margin-bottom: 2vw;
-}
-
-.home-page-top__banner {
-	flex: 1;
-	margin-bottom: 2vw;
-	background-color: #ffffff;
-}
-
-.home-page-top__search {
-	flex: 1;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	padding: 20px;
-	background-color: #ffffff;
-}
-
-/* TMP */
-.home-page-top__search .side-ico {
-	margin-left: auto;
-}
-/* /TMP */
-
-
-.home-page-bottom {
-	display: flex;
-	flex-direction: column;
-}
-
-.home-page-bottom h2 {
-	color: #71caf2;
-	font-size: 24px;
-	font-weight: 300;
-	line-height: 30px;
-	margin: 0;
-	margin-bottom: 25px;
-}
-
-.home-page-bottom__about {
-	flex: 1;
-	margin-bottom: 2vw;
-	padding: 20px;
-	background-color: #ffffff;
-}
-
-.about-us {
-	margin-bottom: 30px;
-}
-
-.lastest-news__list {
-	padding: 0;
-	list-style: none;
-}
-
-.lastest-news__item {
-	display: block;
-	position: relative;
-	margin-bottom: 30px;
-	box-shadow: inset 0 0 50px #dadada, 0 8px 0 #cccccc;
-	padding: 8px;
-	transition: 300ms;
-}
-
-.lastest-news__item:hover {
-	box-shadow: inset 0 0 50px #dadada, 0 8px 0 #cccccc, 0 8px 15px #ed8114;
-	transform: translateY(-4px);
-	transition: 300ms;
-}
-
-.lastest-news__link {
-	display: block;
-}
-
-.lastest-news__date {
-	position: absolute;
-	top: 0;
-	left: 0;
-	padding: 3px 5px 2px;
-	background-color: #f3d3b3;
-	color: #333333;
-}
-
-.lastest-news__more {
-	position: absolute;
-	bottom: 0;
-	right: 0;
-	padding: 2px 10px 0;
-	background-color: #71caf2;
-	color: #333333;
-	border-top-left-radius: 6px;
-}
-
-.lastest-news__head {
-	margin: 0;
-	padding-left: 80px;
-	padding-bottom: 16px;
-	color: #777;
-	font-size: 18px;
-	font-weight: 500;
-}
-
-.lastest-news__dscr {
-	margin: 0;
-	padding-bottom: 18px;
-	color: #333333;
-}
-
-.home-page-bottom__offer {
-	flex: 1;
-	padding: 20px;
-	background-color: #ffffff;
-}
 
 /* Old code */
 
@@ -275,12 +146,10 @@
 }
 
 .lists>div p span:first-child {
-	float: left;
 	display: inline-block;
 }
 
 .lists>div p span+span {
-	float: right;
 	display: inline-block;
 }
 
@@ -394,7 +263,6 @@
 }
 
 #form2 span {
-	display: inline-block;
 	font-size: 10px;
 	line-height: 13px;
 	color: #696969;
@@ -463,8 +331,6 @@
 	width: 410px;
 	height: 369px;
 	margin: 0px 20px 20px 0;
-	float: left;
-	display: inline-block;
 }
 
 .map iframe {
@@ -975,37 +841,3 @@ textarea {
 		margin: 0 30px 15px 0;
 	}
 }
-
-/* Responsive NEW section */
-
-@media (min-width: 700px) {
-
-	.home-page-top {
-		flex-direction: row;
-	}
-	
-	.home-page-top__banner {
-		flex: 2;
-		margin-right: 2vw;
-		margin-bottom: 0;
-	}
-
-	.home-page-top__search {
-		max-width: 340px;
-	}
-
-	.home-page-bottom {
-		flex-direction: row;
-	}
-	
-	.home-page-bottom__about {
-		margin-bottom: 0;
-		margin-right: 2vw;
-	}
-	
-	.home-page-bottom__offer {
-		flex: 2;
-	}
-}
-
-/* End of Responsive NEW section */
