--- a/src/css/jqtransform.css
+++ b/src/css/jqtransform.css
@@ -15,7 +15,7 @@ form.jqtransformdone div.rowElem{
 }
 
 .jqTransformSelectWrapper div {
-	font-family: Arial, Helvetica, sans-serif; font-size:10px; color:#b4b4b4;
+	color:#b4b4b4;
 	padding: 9px 30px 7px 18px;
 	cursor:pointer;
 	line-height:13px;
@@ -48,9 +48,9 @@ form.jqtransformdone div.rowElem{
 }
 .jqTransformSelectWrapper ul a {
 	display: block;
-    font-size:10px; line-height:30px; color:#b4b4b4;
-	font-weight:normal;
-	padding-left:18px;
+	line-height: 30px;
+	color:#b4b4b4;
+	padding-left: 18px;
 }
 .jqTransformSelectWrapper ul a.selected {
 	color: #b4b4b4;
