--- a/src/css/style.css
+++ b/src/css/style.css
@@ -18,7 +18,8 @@
 @import "main-content.css";
 @import "home-page.css";
 @import "inner-page.css";
-
+@import "main-search-form.css";
+@import "contact-form.css";
 
 /* Old code */
 
@@ -159,11 +160,6 @@
 
 /******* forms *******/
 
-.form-title {
-	color: #71caf2;
-	font-size: 24px;
-	line-height: 30px;
-}
 
 .form-title>span {
 	display: block;
@@ -214,104 +210,14 @@
 	width: 220px;
 	margin-right: 20px;
 	display: block;
-	font-weight: normal;
+	font-weight: 300;
 }
 
 .col-2 {
 	float: left;
 	width: 170px;
 	display: block;
-	font-weight: normal;
-}
-
-#form2 {
-	margin-top: 8px;
-}
-
-#form2 p {
-	padding-bottom: 6px;
-}
-
-#form2 .label {
-	display: block;
-	position: relative;
-	padding-bottom: 10px;
-}
-
-#form2 .inp-1 {
-	float: left;
-	border: #d0d0d0 1px solid;
-	width: 98px;
-	height: 13px;
-	font-size: 10px;
-	color: #696969;
-	text-transform: uppercase;
-	padding: 5px 10px 6px 10px;
-	outline: none;
-}
-
-#form2 .inp-2 {
-	float: left;
-	border: #d0d0d0 1px solid;
-	width: 248px;
-	height: 13px;
-	font-size: 10px;
-	color: #696969;
-	text-transform: uppercase;
-	padding: 5px 10px 6px 10px;
-	outline: none;
-}
-
-#form2 span {
-	font-size: 10px;
-	line-height: 13px;
-	color: #696969;
-	float: left;
-	width: 80px;
-	margin-top: 6px;
-}
-
-#form2 .select1 {
-	width: 90px !important;
-	display: block;
-	font-weight: normal;
-	float: left;
-}
-
-#form2 .select2 {
-	width: 270px !important;
-	display: block;
-	font-weight: normal;
-	float: left;
-}
-
-#form2>a {
-	margin-top: 19px;
-}
-
-#form2 textarea {
-	border: #d0d0d0 1px solid;
-	background: #fff;
-	box-sizing: border-box;
-	width: 100%;
-	padding: 9px 0px 0px 10px;
-	font-size: 10px;
-	text-transform: uppercase;
-	color: #696969;
-	font-family: Arial, Helvetica, sans-serif;
-	height: 155px;
-	outline: medium none;
-	overflow: auto;
-	resize: none;
-	float: left;
-}
-
-#form2 .clear {
-	font-size: 0 !important;
-	line-height: 0 !important;
-	float: none !important;
-	margin: 0 !important;
-	display: block;
+	font-weight: 300;
 }
 
 /**********************form**********************/
@@ -435,11 +341,6 @@ dl.adrss dd span {
 	width: 71px;
 }
 
-input:not([type="image"]),
-textarea {
-	box-sizing: content-box;
-}
-
 .errorSummary {
 	margin-bottom: 20px;
 	color: #900;
@@ -555,13 +456,6 @@ textarea {
 	text-align: center;
 	font-size: 14px;
 	font-weight: bold;
-}
-
-.full-search .note {
-	margin: 0 0 10px;
-	color: #cc5;
-	width: 350px;
-	display: none;
 }
 
 #order-page h2.p3 {
