--- a/src/css/style.css
+++ b/src/css/style.css
@@ -223,13 +223,13 @@
 /**********************form**********************/
 
 .small-form {
-	max-width: 380px;
+	max-width: 520px;
+	min-width: 270px;
 	margin: auto;
 	background-color: #fff;
 	padding: 15px 18px;
 	border-radius: 2px;
-	box-shadow: 0 0 40px -10px #aaa;
-	margin-top: 30px;
+	box-shadow: var(--block-shadow);
 }
 
 /* old */
@@ -308,12 +308,6 @@ dl.adrss dd span {
 	display: inline-block;
 	margin-right: 20px;
 	line-height: 42px;
-}
-
-@media only screen and (min-width: 1024px) {
-	#content .full-search>img {
-		display: block;
-	}
 }
 
 .school .school-photo {
@@ -447,17 +441,6 @@ dl.adrss dd span {
 	clear: both;
 }
 
-.under-construction {
-	color: red;
-	background: white;
-	margin: 5px 0;
-	padding: 5px;
-	border: 1px red solid;
-	text-align: center;
-	font-size: 14px;
-	font-weight: bold;
-}
-
 #order-page h2.p3 {
 	margin-bottom: 52px;
 }
@@ -514,6 +497,12 @@ dl.adrss dd span {
 }
 
 /******************** Responsive OLD ******************/
+
+@media only screen and (min-width: 1024px) {
+	#content .full-search>img {
+		display: block;
+	}
+}
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
 	.box-1 ul {
