--- a/src/css/main-layout.css
+++ b/src/css/main-layout.css
@@ -15,15 +15,24 @@
 	padding: 0;
 }
 
+.banner-left-block,
+.article-list {
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+	grid-column-gap: 1vw;
+}
+
 .banner-preview {
+    display: flex;
+    flex-direction: column;
 	margin-bottom: 1vw;
 	background-color: #ffffff;
 	box-shadow: var(--block-shadow);
 	padding: 1vw 1.2vw;
 }
 
-.banner-preview:last-child {
-	margin-bottom: 0;
+.banner-preview__link {
+	margin-top: auto;
 }
 
 /* Responsive section */
