--- a/src/css/main-layout.css
+++ b/src/css/main-layout.css
@@ -31,6 +31,10 @@
 	padding: 1vw 1.2vw;
 }
 
+.banner-preview__img {
+    align-self:  left;
+}
+
 .banner-preview__link {
 	margin-top: auto;
 }
@@ -176,7 +180,7 @@
 	padding-bottom: 25px;
 	color: #777;
 	font-size: 18px;
-	font-weight: 500;
+	font-weight: bold;
 }
 
 .lastest-news__dscr {
