--- a/src/css/main-search-form.css
+++ b/src/css/main-search-form.css
@@ -25,26 +25,20 @@
 	margin-bottom: 2px;
 }
 
-.find-form__row>input {
-    height: 35px;
-    padding: 0 5px;
-    font: inherit;
-    border-radius: 2px;
-    background-color: rgba(0, 0, 0, .04);
-    border: 1px solid #bbbbbb;
-}
-
+.find-form__row>input,
 .find-form__row select {
 	height: 35px;
 	padding: 0 5px;
 	font: inherit;
-	border-radius: 2px;
 	appearance: none;
+	border-radius: 2px;
+	background-color: rgba(0, 0, 0, .04);
+	border: 1px solid #bbbbbb;
+}
+.find-form__row select {
 	background-image: url("data:image/svg+xml;utf8,<svg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='24' height='24' viewBox='0 0 24 24'><path fill='rgb(68,68,68)' d='M7.406 7.828l4.594 4.594 4.594-4.594 1.406 1.406-6 6-6-6z'/></svg>");
 	background-position: 100% 50%;
 	background-repeat: no-repeat;
-	background-color: rgba(0, 0, 0, .04);
-	border: 1px solid #bbbbbb;
 }
 
 .radio-block {
