--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -7,5 +7,6 @@
   --menu-text-color: #dddddd;
   --menu-text-shadow: 0px 0px 10px #333333;
 
+  --block-bg: #ffffff;
   --block-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
   }
