--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,8 +3,8 @@
 @import "typo.css";
 
 @import "forms.css";
-@import "slider.css";
 @import "buttons.css";
+@import "paginator.css";
 
 @import "fonts.css";
 @import "arrow-to-top.css";
